<resources>
    <string name="app_name">Dialog</string>

    <string name="title">Alert_Dailog </string>
    <string name="message">Do You Want Close ?  </string>
    <string name="savee">Do You Want Save ?  </string>
    <string name="ok">OK </string>
    <string name="Cancel">Cancel </string>
    <string name="cancel">Cancel </string>

    <string name="alert_dailog">alert_Dailog</string>
    <string name="exit">exit</string>
    <string name="save">save</string>
    <string name="name"> NAME</string>
    <string name="enter_your_name">enter your name</string>
    <string name="custom_dailog">Custom Dailog</string>
    <string name="do_you_want_exit">Do You Want Exit?</string>
    <string name="costum">Costum</string>
    <string name="coustom">Coustom</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="set_data">SET DATA</string>
    <string name="set_date">SET DATE</string>
    <string name="date_picker">DATE PICKER</string>
    <string name="progress_bar">Progress bar</string>
    <string name="click">Click</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="mydialogfragment">MyDialogFragment</string>

</resources>
